# xmes

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
assets/: tailwind.css
crates/xmtp-rs/: Cargo.toml
crates/xmtp-rs/src/: lib.rs  tests.rs  wallet.rs
landing-page/: build.sh  zola.toml
landing-page/content/: _index.md  impressum.md
landing-page/public/: 404.html  index.html  robots.txt  sitemap.xml
landing-page/public/css/: custom-main.css
landing-page/static/css/: custom-main.css
landing-page/static/icons/: site.webmanifest
landing-page/templates/: landing.html  simple.html
landing-page/templates/macros/: head.html
patches/xmtp_configuration/: Cargo.toml
patches/xmtp_configuration/src/common/: mls.rs
src/: main.rs
src/components/: mod.rs
src/xmtp/: mod.rs
xmes-mobile-pwa/: Cargo.toml  Dioxus.toml  README.md  build.sh
xmes-mobile-pwa/assets/: sw.js  tailwind.css
xmes-mobile-pwa/assets/styling/: main.css
xmes-mobile-pwa/public/: index.html  jsqr.min.js  register-sw.js  sw.js
xmes-mobile-pwa/src/: crypto_store.rs  main.rs
xmes-mobile-pwa/src/components/: add_members.rs  mod.rs  qr.rs
xmes-mobile-pwa/src/components/chat/: mod.rs
xmes-mobile-pwa/src/components/conversations/: conversation.rs  mod.rs
xmes-mobile-pwa/src/components/identities/: mod.rs
xmes-push-worker/: package-lock.json  package.json  wrangler.toml
xmes-push-worker/scripts/: generate-keys.mjs
xmes-push-worker/src/: index.ts
xmes-pwa/: Cargo.toml  README.md
xmes-pwa/assets/: manifest.webmanifest  register-sw.js  tailwind.css
xmes-pwa/assets/styling/: main.css
xmes-pwa/public/: manifest.webmanifest  sw.js
xmes-pwa/src/: main.rs  worker.rs
xmes-pwa/src/components/: add_members.rs  mod.rs
xmes-pwa/src/components/chat/: mod.rs
xmes-pwa/src/components/conversations/: conversation.rs  mod.rs
xmes-pwa/src/components/identities/: mod.rs
xmes-xmtp/: Cargo.toml
xmes-xmtp-lib/: Cargo.toml
xmes-xmtp-lib/src/: lib.rs
xmes-xmtp-wasm/: Cargo.toml  README.md
xmes-xmtp-wasm/src/: lib.rs  worker.rs
xmes-xmtp/src/: lib.rs
xmtp-api-reverse-proxy/: package.json  tsconfig.json  vercel.json
xmtp-api-reverse-proxy/api/: proxy.ts
xmtp-wasm/: Cargo.toml
xmtp-wasm/src/: lib.rs
