[package]
name = "xmes"
version = "0.1.0"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
edition = "2024"


[dependencies]
dioxus = { version = "*", features = [] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-sdk = { version = "0.7.0", features = ["storage"] }
xmes-xmtp-wasm.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
