[package]
name = "xmes"
version = "0.1.0"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
edition = "2024"


[dependencies]
dioxus = { version = "*", features = [] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-sdk = { version = "0.7.0", features = ["storage"] }
xmes-xmtp-wasm.workspace = true
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
