[package]
name = "xmes-xmtp-wasm"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["signers", "signer-local"] }
anyhow = "1.0.102"
bindings_wasm = { git = "https://github.com/xmtp/libxmtp", subdir = "bindings/wasm" }
bip39 = "2.2.2"
hex = "0.4"
js-sys = { version = "=0.3.91" }
k256 = "0.13.4"
sha3 = "0.10.8"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
zstd = { version = "0.13", default-features = false, features = ["wasm"] }
zstd-sys = { version = "2", features = ["wasm"] }

[dependencies.web-sys]
version = "=0.3.91"
features = [
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "HtmlScriptElement",
    "MessageEvent",
    "Url",
    "Window",
    "Worker",
]

[lib]
name = "xmes_xmtp_wasm"

[profile.dev]
debug = 0



