[package]
name = "xmes-xmtp-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Florian Petautschnig <mail@floscodes.net>"]
description = "WebAssembly library for XMTP-based decentralized group messaging — identity management, conversations, and a Dedicated Worker infrastructure for non-blocking browser operation."
license = "MIT"
repository = "https://github.com/floscodes/xmes"
homepage = "https://xmes.org"
readme = "README.md"
keywords = ["xmtp", "wasm", "messaging", "web3", "decentralized"]
categories = ["wasm", "cryptography::cryptocurrencies", "web-programming"]
exclude = [".github", "*.PNG", "*.png"]

# NOTE: bindings_wasm is currently sourced from the libxmtp git repository
# (https://github.com/xmtp/libxmtp, subdir bindings/wasm) because it is not
# yet published to crates.io. Publishing this crate to crates.io requires that
# bindings_wasm (or a compatible replacement) is available there first.
# Track upstream: https://github.com/xmtp/libxmtp/issues

[dependencies]
alloy = { version = "1", features = ["signers", "signer-local"] }
anyhow = "1.0.102"
bindings_wasm = { git = "https://github.com/xmtp/libxmtp", subdir = "bindings/wasm" }
bip39 = "2.2.2"
hex = "0.4"
js-sys = { version = "=0.3.91" }
k256 = "0.13.4"
sha3 = "0.10.8"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
zstd = { version = "0.13", default-features = false, features = ["wasm"] }

[dependencies.web-sys]
version = "=0.3.91"
features = [
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "HtmlScriptElement",
    "MessageEvent",
    "console",
    "Url",
    "Window",
    "Worker",
]

[lib]
name = "xmes_xmtp_wasm"

[profile.dev]
debug = 0



