[package]
name = "xmtp-rs"
authors = ["flopetautschnig (floscodes) <mail@floscodes.net>"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bindings_wasm = { git = "https://github.com/floscodes/libxmtp", subdir = "bindings/wasm", branch = "fix/tracing-subscriber" }
bip39 = "2.2.2"
hex = "0.4"
js-sys = { version = "=0.3.91" }
k256 = "0.13.4"
sha3 = "0.10.8"
wasm-bindgen = "=0.2.114"

[lib]
name = "xmtp_rs"

[dev-dependencies]
wasm-bindgen-test = "=0.3.64"


